Fixed text overflow of caret (arrow)

--- a/src/global/less/corporate-ui/forms.less
+++ b/src/global/less/corporate-ui/forms.less
@@ -59,6 +59,7 @@ textarea[placeholder] {
     }
   }
 }
+
 .form-control {
   color: @main-font-color;
   padding: 20px 40px;
@@ -75,6 +76,7 @@ textarea[placeholder] {
     background: #f6f9fa;
   }
 
+
   select& {
     cursor: pointer;
     -webkit-appearance: none;
@@ -84,7 +86,7 @@ textarea[placeholder] {
     background-repeat: no-repeat;
     background-size: 37px;
     background-position: ~'calc(100% - 10px)' center;
-
+    padding-right: 40px!important;
 
     &:focus {
       font-size: inherit;
@@ -104,6 +106,7 @@ textarea[placeholder] {
       background: #f5f5f5;
       font-size: 1.4rem;
       width: 100%;
+
     }
 
     &.input-sm {
