--- a/src/global/less/corporate-ui/tables.less
+++ b/src/global/less/corporate-ui/tables.less
@@ -57,6 +57,7 @@ table { //This is to override the Boostrap standard of "collapse" on all table e
             padding: 4px 10px;
             font-size: 1.2rem;
             border: 1px solid #94999d;
+            padding-right: 40px!important;
 
             &::placeholder,
             &::-webkit-input-placeholder,
